fix: title ellipsis, preview line-clamp, dan tag wrapping
- Fix selector .isi-box, p yang mengganggu display -webkit-box (line-clamp)
- Restore -webkit-line-clamp: 2 untuk title (hapus line-clamp tanpa prefix)
- Uncomment preview ellipsis + -webkit-line-clamp: 4
- Tambah white-space: nowrap pada tag container supaya tidak wrap
- Tambah overflow: hidden + text-overflow: ellipsis pada tag individual

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -228,8 +228,7 @@ body {
     left: 0;
 }
 
-.isi-box, p {
-    display: inline-block;
+.isi-box {
     box-sizing: border-box;
 }
 
@@ -242,8 +241,7 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    // -webkit-line-clamp: 2; (deprecated tanggal 31/12/2024)
-    line-clamp: 2;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 
     color: var(--color-judul);
@@ -260,14 +258,20 @@ body {
     line-height: 1.7rem;
     color: var(--color-headline-p);
     overflow: hidden;
-    // text-overflow: ellipsis;
-    // display: -webkit-box;
-    // -webkit-line-clamp: 5;
-    // -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
 }
 
 .post .preview:first-letter {
     text-transform: capitalize;
+}
+
+.post span { /* Tag container */
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .post span p { /* Tag */
@@ -279,6 +283,10 @@ body {
     background-color: var(--oren-cerahhh);
     color: var(--oren-gelap);
     box-sizing: border-box;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
 
 .pre-lainnya {
